<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_navigation_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_workflows"
        android:icon="@drawable/ic_navigation_workflows"
        android:title="@string/title_workflows" />

    <item
        android:id="@+id/navigation_modules"
        android:icon="@drawable/ic_navigation_modules"
        android:title="@string/title_modules" />

    <item
        android:id="@+id/navigation_repository"
        android:icon="@drawable/ic_navigation_repository"
        android:title="@string/title_repository" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_navigation_settings"
        android:title="@string/title_settings" />
</menu>