<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_favorite_float"
        android:icon="@drawable/rounded_branding_watermark_24"
        android:title="@string/workflow_list_menu_favorite_float"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_sort_by_name"
        android:icon="@drawable/rounded_sort_24"
        android:title="@string/workflow_list_menu_sort_by_name"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_more_options"
        android:icon="@drawable/ic_more_vert"
        android:title="@string/workflow_item_more_options"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_create_folder"
                android:title="@string/folder_create" />
            <item
                android:id="@+id/menu_backup_workflows"
                android:title="@string/workflow_list_menu_backup_all" />
            <item
                android:id="@+id/menu_import_workflows"
                android:title="@string/workflow_list_menu_import_restore" />
        </menu>
    </item>
</menu>
