<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_trigger_type"
        android:textAppearance="?attr/textAppearanceLabelLarge" />

    <RadioGroup
        android:id="@+id/rg_trigger_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
        <RadioButton
            android:id="@+id/rb_state_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_bluetooth_state_change" />
        <RadioButton
            android:id="@+id/rb_device_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_device_connection_change" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/container_state_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_event"
            android:textAppearance="?attr/textAppearanceLabelLarge" />
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_state_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true">
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_state_on"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_turned_on" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_state_off"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_turned_off" />
        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_device_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_event"
            android:textAppearance="?attr/textAppearanceLabelLarge" />
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_device_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true">
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_device_connect"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_when_connected" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_device_disconnect"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_when_disconnected" />
        </com.google.android.material.chip.ChipGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_target_device"
            android:textAppearance="?attr/textAppearanceLabelLarge"/>
        <TextView
            android:id="@+id/tv_selected_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            tools:text="任何设备"/>
        <Button
            android:id="@+id/btn_select_device"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:icon="@drawable/rounded_bluetooth_24"
            android:text="@string/desc_select_device" />
    </LinearLayout>
</LinearLayout>